--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@kangc/v-md-editor": "^1.4.10",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "dayjs": "^1.8.33",
     "element-ui": "^2.4.5",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
-    "vue-router": "^3.4.2",
+    "vue-router": "^3.4.3",
     "vuetify": "^2.3.8",
     "vuex": "^3.4.0"
   },
